parallel match cache conflict fix